--- a/index.html
+++ b/index.html
@@ -106,11 +106,15 @@
                   <span class="item-info-value">Today</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
@@ -119,17 +123,21 @@
                   <span class="item-info-value">9-08-2016</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
                 </div>
                 <div class="item-info">
-                  <span class="item-upload">Image upload</span>
+                  <button class="btn btn-upload">Image upload</button>
                   <span class="item-upload-date">11-04-2016</span>
                 </div>
               </div>
@@ -145,11 +153,15 @@
                   <span class="item-info-value">Today</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
@@ -158,17 +170,21 @@
                   <span class="item-info-value">9-08-2016</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
                 </div>
                 <div class="item-info">
-                  <span class="item-upload">Image upload</span>
+                  <button class="btn btn-upload">Image upload</button>
                   <span class="item-upload-date">11-04-2016</span>
                 </div>
               </div>
@@ -184,11 +200,15 @@
                   <span class="item-info-value">Today</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
@@ -197,17 +217,21 @@
                   <span class="item-info-value">9-08-2016</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
                 </div>
                 <div class="item-info">
-                  <span class="item-upload">Image upload</span>
+                  <button class="btn btn-upload">Image upload</button>
                   <span class="item-upload-date">11-04-2016</span>
                 </div>
               </div>
@@ -223,11 +247,15 @@
                   <span class="item-info-value">Today</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
@@ -236,17 +264,21 @@
                   <span class="item-info-value">9-08-2016</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
                 </div>
                 <div class="item-info">
-                  <span class="item-upload">Image upload</span>
+                  <button class="btn btn-upload">Image upload</button>
                   <span class="item-upload-date">11-04-2016</span>
                 </div>
               </div>
@@ -262,11 +294,15 @@
                   <span class="item-info-value">Today</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
@@ -275,17 +311,21 @@
                   <span class="item-info-value">9-08-2016</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
                 </div>
                 <div class="item-info">
-                  <span class="item-upload">Image upload</span>
+                  <button class="btn btn-upload">Image upload</button>
                   <span class="item-upload-date">11-04-2016</span>
                 </div>
               </div>
@@ -301,11 +341,15 @@
                   <span class="item-info-value">Today</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
@@ -314,17 +358,21 @@
                   <span class="item-info-value">9-08-2016</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
                 </div>
                 <div class="item-info">
-                  <span class="item-upload">Image upload</span>
+                  <button class="btn btn-upload">Image upload</button>
                   <span class="item-upload-date">11-04-2016</span>
                 </div>
               </div>
@@ -340,11 +388,15 @@
                   <span class="item-info-value">Today</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
@@ -353,17 +405,21 @@
                   <span class="item-info-value">9-08-2016</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
                 </div>
                 <div class="item-info">
-                  <span class="item-upload">Image upload</span>
+                  <button class="btn btn-upload">Image upload</button>
                   <span class="item-upload-date">11-04-2016</span>
                 </div>
               </div>
@@ -379,11 +435,15 @@
                   <span class="item-info-value">Today</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
@@ -392,17 +452,21 @@
                   <span class="item-info-value">9-08-2016</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
                 </div>
                 <div class="item-info">
-                  <span class="item-upload">Image upload</span>
+                  <button class="btn btn-upload">Image upload</button>
                   <span class="item-upload-date">11-04-2016</span>
                 </div>
               </div>
@@ -418,11 +482,15 @@
                   <span class="item-info-value">Today</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
@@ -431,17 +499,21 @@
                   <span class="item-info-value">9-08-2016</span>
                   <div class="item-info-rating">
                     <div class="item-info-likes">
-                      <i class="icon-like"></i>
+                      <button class="btn">
+                        <i class="icon-like"></i>
+                      </button>
                       <div class="item-info-likes-value">128</div>
                     </div>
                     <div class="item-info-comments">
-                      <i class="icon-comment"></i>
+                      <button class="btn">
+                        <i class="icon-comment"></i>
+                      </button>
                       <div class="item-info-comments-value">31</div>
                     </div>
                   </div>
                 </div>
                 <div class="item-info">
-                  <span class="item-upload">Image upload</span>
+                  <button class="btn btn-upload">Image upload</button>
                   <span class="item-upload-date">11-04-2016</span>
                 </div>
               </div>
